--- a/package.json
+++ b/package.json
@@ -7,45 +7,43 @@
   "version": "1.0.0",
   "description": "JavaScript environment starter package for Node.js projects",
   "scripts": {
-	  "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
   },
   "author": "Juan Gonzalez",
   "license": "MIT",
-  "dependencies": {
-    "whatwg-fetch": "^3.0.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.11.4",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "chalk": "^2.4.1",
-    "cheerio": "^1.0.0-rc.2",
-    "compression": "^1.7.3",
-    "cross-env": "^5.2.0",
+    "cheerio": "^1.0.0-rc.3",
+    "compression": "^1.7.4",
+    "cross-env": "^5.2.1",
     "css-loader": "^2.0.1",
-    "eslint": "^5.10.0",
+    "eslint": "^5.16.0",
     "eslint-config-eslint": "^5.0.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-watch": "^4.0.2",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "jsdom": "^13.1.0",
-    "json-schema-faker": "^0.5.0-rc16",
-    "json-server": "^0.14.2",
-    "localtunnel": "^1.9.1",
-    "lodash": "^4.17.11",
+    "json-schema-faker": "^0.5.0-rcv.27",
+    "json-server": "^0.16.1",
+    "localtunnel": "^1.9.2",
+    "lodash": "^4.17.20",
     "mocha": "^5.2.0",
     "nock": "^10.0.4",
     "npm-run-all": "^4.1.5",
     "numeral": "^2.0.6",
     "opn": "5.4.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.28.3",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-md5-hash": "0.0.6"
+    "webpack": "^4.44.1",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-md5-hash": "0.0.6",
+    "whatwg-fetch": "^3.4.0"
   }
 }
